trunk/OldArchive/528f3074ea131cb725efd81369660f74-542192d2d8aca3c820c7acc656fa0c68/output
+ g++ -std=c++11 main.cpp
main.cpp:1:3: error: ‘A’ does not name a type
   A B C D 
   ^
